Add Wayland support

krdc can now connect to RDP on Wayland session.

The remote window is not embedded in krdc yet
but this is better than not connecting at all.

BUG: 377911
Differential Revision: https://phabricator.kde.org/D18909